# Light_AbandonedIteration

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Light Engine.sln  README.md  Test.Mirror  default_gui_layout.ini
BuildScripts/: build.lua  dependencies.lua  premake5.lua
Dependencies/: CMakeLists.txt
Dependencies/Configurations/imgui/: imconfig.h
Dependencies/GLAD/: CMakeLists.txt  build.lua  premake5.lua
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Dependencies/entt/: build.lua  entt.hpp
Dependencies/stb_image/: CMakeLists.txt  build.lua  stb_image.c  stb_image.h
Engine/: .clang-format  CMakeLists.txt  build.lua  premake5.lua
Engine/res/: pixel.ps  vertex.vs
Engine/res/Shaders/: QuadShader.h  TextureShader.h
Engine/res/Shaders/Quad/: Quad_PS.glsl  Quad_PS.hlsl  Quad_VS.glsl  Quad_VS.hlsl
Engine/res/Shaders/Texture/: Texture_PS.glsl  Texture_PS.hlsl  Texture_VS.glsl  Texture_VS.hlsl
Engine/res/Shaders/TintedTexture/: TintedTexture_PS.glsl  TintedTexture_PS.hlsl  TintedTexture_VS.glsl  TintedTexture_VS.hlsl
Engine/src/: LightEngine.h  renameall.sh
Engine/src/Engine/: Application.cpp  Base.h  EntryPoint.h  LightEngine.h  LightEngine.hpp  ltpch.cpp  ltpch.h  ltpch.hpp
Engine/src/Engine/Base/: Base.h  Base.hpp  Config.h  Config.hpp  EntryPoint.h  EntryPoint.hpp
Engine/src/Engine/Base/Portables/: DebugTrap.h  DebugTrap.hpp
Engine/src/Engine/Camera/: Camera.cpp  Camera.h  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCamera.hpp  SceneCamera.cpp  SceneCamera.h  SceneCamera.hpp
Engine/src/Engine/Core/: Application.cpp  Application.h  Application.hpp  Logger.cpp  Logger.h  UUID.cpp  UUID.h  Window.h  Window.hpp
Engine/src/Engine/Debug/: Exceptions.cpp  Exceptions.h  Exceptions.hpp  Instrumentor.cpp  Instrumentor.h  Instrumentor.hpp  Logger.cpp  Logger.h  Logger.hpp
Engine/src/Engine/Events/: CharEvent.h  CharEvent.hpp  Dispatcher.h  Event.h  Event.hpp  Events.cpp  KeyboardEvent.h  KeyboardEvents.h  KeyboardEvents.hpp  MouseEvents.h  MouseEvents.hpp  WindowEvents.h  WindowEvents.hpp
Engine/src/Engine/Graphics/: Blender.cpp  Blender.h  Blender.hpp  Buffers.cpp  Buffers.h  Buffers.hpp  Framebuffer.cpp  Framebuffer.h  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.h  GraphicsContext.hpp  RenderCommand.cpp  RenderCommand.h  RenderCommand.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  SharedContext.h  SharedContext.hpp  Texture.cpp  Texture.h  Texture.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  VertexLayout.hpp
Engine/src/Engine/Graphics/RendererPrograms/: QuadRendererProgram.cpp  QuadRendererProgram.h  QuadRendererProgram.hpp  RendererProgram.h  RendererProgram.hpp  TextureRendererProgram.cpp  TextureRendererProgram.h  TextureRendererProgram.hpp  TintedTextureRendererProgram.cpp  TintedTextureRendererProgram.h  TintedTextureRendererProgram.hpp
Engine/src/Engine/Input/: Input.cpp  Input.h  Input.hpp  InputCodes.h  KeyCodes.h  KeyCodes.hpp  MouseCodes.h  MouseCodes.hpp
Engine/src/Engine/Layer/: Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp
Engine/src/Engine/Math/: Random.cpp  Random.hpp  TempExtensions.cpp  TempExtensions.h
Engine/src/Engine/Scene/: Components.h  Components.hpp  Entity.cpp  Entity.h  Entity.hpp  Scene.cpp  Scene.h  Scene.hpp
Engine/src/Engine/Scene/Components/: CameraComponent.h  CameraComponent.hpp  NativeScriptComponent.h  NativeScriptComponent.hpp  ScriptableEntity.h  ScriptableEntity.hpp  SpriteRendererComponent.h  SpriteRendererComponent.hpp  TagComponent.h  TagComponent.hpp  TransformComponent.h  TransformComponent.hpp  UUIDComponent.h  UUIDComponent.hpp
Engine/src/Engine/Time/: Timer.cpp  Timer.h  Timer.hpp
Engine/src/Engine/UserInterface/: UserInterface.cpp  UserInterface.h  UserInterface.hpp
Engine/src/Engine/Utility/: FileManager.cpp  FileManager.h  FileManager.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  Serializer.cpp  Serializer.h  Serializer.hpp  Stringifier.cpp  Stringifier.h  Stringifier.hpp
Engine/src/Platform/GraphicsAPI/DirectX/: dxBase.h  dxBlender.cpp  dxBlender.h  dxBlender.hpp  dxBuffers.cpp  dxBuffers.h  dxBuffers.hpp  dxFramebuffer.cpp  dxFramebuffer.h  dxFramebuffer.hpp  dxGraphicsContext.cpp  dxGraphicsContext.h  dxGraphicsContext.hpp  dxRenderCommand.cpp  dxRenderCommand.h  dxRenderCommand.hpp  dxShader.cpp  dxShader.h  dxShader.hpp  dxSharedContext.h  dxSharedContext.hpp  dxTexture.cpp  dxTexture.h  dxTexture.hpp  dxUserInterface.cpp  dxUserInterface.h  dxUserInterface.hpp  dxVertexLayout.cpp  dxVertexLayout.h  dxVertexLayout.hpp
Engine/src/Platform/GraphicsAPI/OpenGL/: glBlender.cpp  glBlender.h  glBlender.hpp  glBuffers.cpp  glBuffers.h  glBuffers.hpp  glFramebuffer.cpp  glFramebuffer.h  glFramebuffer.hpp  glGraphicsContext.cpp  glGraphicsContext.h  glGraphicsContext.hpp  glRenderCommand.cpp  glRenderCommand.h  glRenderCommand.hpp  glShader.cpp  glShader.h  glShader.hpp  glSharedContext.h  glSharedContext.hpp  glTexture.cpp  glTexture.h  glTexture.hpp  glUserInterface.cpp  glUserInterface.h  glUserInterface.hpp  glVertexBuffer.cpp  glVertexBuffer.h  glVertexLayout.cpp  glVertexLayout.h  glVertexLayout.hpp
Engine/src/Platform/GraphicsAPI/Vulkan/: vkGraphicsContext.cpp  vkGraphicsContext.h  vkShader.cpp  vkShader.h  vkSharedContext.cpp  vkSharedContext.h
Engine/src/Platform/OS/Linux/: lWindow.cpp  lWindow.h  lWindow.hpp
Engine/src/Platform/OS/Windows/: wWindow.cpp  wWindow.h  wWindow.hpp
Mirror/: CMakeLists.txt  build.lua  default_gui_layout.ini  imgui_log.txt  premake5.lua
Mirror/res/Scenes/: editorlayer.yaml
Mirror/src/: EditorLayer.cpp  EditorLayer.cpp~  EditorLayer.h  EditorLayer.hpp  MirrorApp.cpp  MirrorLayer.h
Mirror/src/Panels/: AssetBrowser.cpp  AssetBrowser.hpp  ContentBrowser.cpp  ContentBrowser.h  ContentBrowser.hpp  Panel.h  PropertiesPanel.cpp  PropertiesPanel.h  PropertiesPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneHierarchyPanel.hpp
(+28 files in other folders)
